2005-12-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_base::issymlink): New method.
	* syscalls.cc (open): Handle O_NOFOLLOW flag.
	* include/fcntl.h (_FNOFOLLOW): New define.
	(O_NOFOLLOW): Ditto.
	* include/cygwin/version.h: Bump API minor number.

2005-12-22  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (winpids::add): Increment nelem when winpid is true since we
	don't care if it's a cygwin process in that case.

2005-12-22  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (winpids::release): Fix typo.

2005-12-21  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (pinfo::init): Clarify comment slightly.
	(_onreturn): New helper class.
	(winpids:add): Remove copied stuff.  Try to put process handle into
	pinfo in question and use _onreturn class to control when to close it.
	(winpids::release): Remove use of copied array.  Free procinfo when
	hProcess is NULL.  Otherwise call release and call CloseHandle on
	hProcess.
	* pinfo.h (winpids::copied): Remove throughout class.

2005-12-21  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (pinfo::init): Remove spurious low_priority_sleep.

2005-12-21  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Hide the window whenever ctty == -1, not just
	when we have no console.

2005-12-21  Christopher Faylor  <cgf@timesys.com>

	* cygheap.cc (init_cygheap::manage_console_count): Revert previous
	change.  Handle this a different way.
	* external.cc (cygwin_internal): Accommodate extra
	hook_or_detect_cygwin argument.
	* hookapi.cc (cygwin_internal): Fill in subsys variable with the
	subsystem of the executable.
	* spawn.cc (av::iscui): New variable.
	(spawn_guts): Hide window when we don't have a console and this isn't
	NT/XP/2003.
	(av::fixup): Set iscui flag.
	* winsup.h (hook_or_detect_cygwin): Accommodate extra argument.

2005-12-21  Christopher Faylor  <cgf@timesys.com>

	* cygheap.cc (init_cygheap::manage_console_count): Don't call
	FreeConsole on 9x/Me.
